<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="unknown">Unknown</string>
    <string name="not_charging">Not Charging</string>
    <string name="full">Full</string>
    <string name="degree_symbol">°C</string>
    <string name="wattage">W</string>
    <string name="volt_unit">V</string>
    <string name="ma">mA</string>


    <string name="temp">Temp</string>
    <string name="volt">Volt</string>
    <string name="time">Time</string>
    <string name="power">Power</string>
    <string name="no">No</string>
    <string name="level">Level</string>
    <string name="current">Current</string>
    <string name="dummy_text">Dummy Text</string>

    <string name="charged_for">Charged for</string>
    <string name="discharged_for">Discharged for</string>

    <string name="charging_started">Charging started</string>
    <string name="charging_ended">Charging ended</string>

    <string name="discharging_started">Discharging started</string>
    <string name="discharging_ended">Discharging ended</string>
    <string name="only_android_14_plus">Only android 14+</string>
    <string name="not_available">Not available</string>
    <string name="mah">mah</string>
    <string name="min">Min</string>
    <string name="max">Max</string>

    <string name="in">In</string>
    <string name="at">at</string>
    <string name="use">Use</string>
    <string name="tap_to_see_detail">Tap to see detail</string>
    <string name="microamp">μA</string>
</resources>