<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="7"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline"
        android:text="@string/no"/>

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/tvLevel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline"
        android:text="@string/level"/>

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline"
        android:text="@string/current"/>

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline"
        android:text="@string/temp"/>

    <TextView
        android:id="@+id/tvPower"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline"
        android:text="@string/power"/>

    <TextView
        android:id="@+id/tvVoltage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/textview_outline_right"
        android:text="@string/volt"/>
</LinearLayout>
